--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@wessberg/rollup-plugin-ts": "^1.3.2",
     "chai": "^4.2.0",
+    "crypto": "^1.0.1",
     "del-cli": "^3.0.1",
     "express": "^4.17.1",
     "foodoc": "0.0.9",
