--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint-fix": "tslint -c tslint.json \"src/**/*.ts\" --fix",
     "test": "mocha",
     "manual-test": "start http://localhost:3000/index.html & node ./test/manual-test.js",
-    "coverage": "del ./coverage \n mkdir ./coverage \n nyc mocha && nyc report --reporter=text-lcov | relcov > ./coverage/lcov.info",
-    "docs": "del ./docs & jsdoc . -c jsdoc.json"
+    "coverage": "npx del-cli ./coverage; npx make-dir-cli ./coverage; nyc mocha && npx nyc report --reporter=text-lcov | relcov > ./coverage/lcov.info",
+    "docs": "npx del-cli ./docs & jsdoc . -c jsdoc.json"
   },
   "keywords": [
     "Hash",
@@ -21,12 +21,16 @@
     "Security",
     "Authentication",
     "Token",
-    "TypeScript"
+    "TypeScript",
+    "cross-browser",
+    "IE11"
   ],
   "author": "Marco Ricupero <marco.ricupero@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-babel": "^5.2.0",
+    "@types/chai": "^4.2.12",
+    "@types/express": "^4.17.7",
     "@wessberg/rollup-plugin-ts": "^1.3.2",
     "chai": "^4.2.0",
     "crypto": "^1.0.1",
@@ -34,6 +38,7 @@
     "express": "^4.17.1",
     "foodoc": "0.0.9",
     "jsdoc": "^3.6.5",
+    "make-dir-cli": "^2.0.0",
     "mocha": "^8.1.1",
     "nyc": "^15.1.0",
     "playwright": "^1.3.0",
