--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -1,7 +1,7 @@
 # This is an example Mocha config containing every Mocha option plus others
 allow-uncaught: false
 async-only: false
-bail: false
+bail: true
 check-leaks: true
 color: true
 delay: false
@@ -13,7 +13,7 @@ extension:
 # fgrep: something
 forbid-only: false
 forbid-pending: false
-full-trace: false
+full-trace: true
 # fgrep and grep are mutually exclusive
 # grep: something
 growl: false
@@ -22,14 +22,17 @@ inline-diffs: false
 # invert: false
 recursive: false
 retries: 1
+require:
+  - ts-node/register
+  - source-map-support/register
 slow: 1000
 sort: false
-spec: 'test/**/*.test.js'
+spec: 'test/**/*.test.ts'
 timeout: 5000 # same as "no-timeout: true" or "timeout: 0"
 trace-warnings: true # node flags ok
 ui: 'bdd'
 v8-stack-trace-limit: 100 # V8 flags are prepended with "v8-"
 watch: false
 watch-files:
-  - 'lib/**/*.js'
-  - 'test/**/*.js'
+  - 'src/**/*.ts'
+  - 'test/**/*.ts'
