--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "tslint -c tslint.json \"src/**/*.ts\"",
     "lint-fix": "tslint -c tslint.json \"src/**/*.ts\" --fix",
     "test": "mocha",
-    "manual-test": "start http://localhost:3000/index.html & node ./test/manual-test.js",
+    "manual-test": "start http://localhost:3000/index.html & npx ts-node ./test/manual-test.ts",
     "coverage": "npx del-cli ./coverage; npx make-dir-cli ./coverage; nyc mocha && npx nyc report --reporter=text-lcov | relcov > ./coverage/lcov.info",
     "docs": "npx del-cli ./docs & jsdoc . -c jsdoc.json"
   },
@@ -31,6 +31,7 @@
     "@rollup/plugin-babel": "^5.2.0",
     "@types/chai": "^4.2.12",
     "@types/express": "^4.17.7",
+    "@types/mocha": "^8.0.3",
     "@wessberg/rollup-plugin-ts": "^1.3.2",
     "chai": "^4.2.0",
     "crypto": "^1.0.1",
@@ -45,6 +46,7 @@
     "relcov": "^1.0.6",
     "rollup": "^2.26.5",
     "rollup-plugin-license": "^2.2.0",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.2"
   }
