--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=./
 sonar.exclusions=**/node_modules/**,**/examples/**,**/test/**,**/coverage/**,**/docs/**
 sonar.projectName=hashagna
-sonar.projectDescription=GET/POST via iFrame Hash catcher
+sonar.projectDescription=Utility to handle (GET or POST) APIs which redirects (3xx) to an uri appending Hash params via iFrame
 sonar.tests=test
 sonar.language=js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
