--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectVersion=1.0.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=./
-sonar.exclusions=**/node_modules/**,**/examples/**,**/test/**,**/coverage/**,**/docs/**
+sonar.sources=./src
+sonar.exclusions=**/node_modules/**,**/examples/**,**/test/**,**/coverage/**,**/docs/**,**/dist/**
 sonar.projectName=hashagna
 sonar.projectDescription=Utility to handle (GET or POST) APIs which redirects (3xx) to an uri appending Hash params via iFrame
 sonar.tests=test
-sonar.language=js
+sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
